[package]
name = "smush-convert-bot"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[dependencies]
nus3audio = ">=1.0.5"
motion_list_rs = "^1.1"
hash40 = "^0.3"
byteorder = "^1.3"
serde_yaml = "^0.8"
riff-wave = "^0.1"

[dependencies.serenity]
default-features = false
version = "0.5"
features = [
    "builder",
    "model",
    "client",
    "framework",
    "standard_framework"
]

[path.serenity]
openssl = "0.10"
