[package]
name = "smush-convert-bot"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[dependencies]
nus3audio = ">=1.0.5"
motion_list_rs = "^1.1"
hash40 = "^0.3"
byteorder = "^1.3"
serde_yaml = "^0.8"
sqb-rs = { git = "https://github.com/BenHall-7/sqb-rs" }
nutexb = "0.0.3"
hound = "3"
samplerate = "0.2"
fuzzy-matcher = "0.3"
lazy_static = "1.4"
sarc = "1.1.1"
zip = "0.5.5"
yaz0 = "0.1.2"

[dependencies.serenity]
default-features = false
version = "0.8"
features = [
    "builder",
    "model",
    "client",
    "framework",
    "standard_framework",
    "rustls_backend",
    "cache"
]

[path.serenity]
openssl = "0.10"
